feat: adding new module
Signed-off-by: Bram Vogelaar <bram@attachmentgenie.com>

--- a/managed_modules.yml
+++ b/managed_modules.yml
@@ -5,6 +5,7 @@
 - attachmentgenie-mailhog
 - attachmentgenie-mimir
 - attachmentgenie-profiles
+- attachmentgenie-puppet_dynamodb_otp
 - attachmentgenie-roles
 - attachmentgenie-tempo
 - attachmentgenie-traefik2
